...
				};

				// 로컬 상태 업데이트
				setUserInfo(newUserInfo);
				await AsyncStorage.setItem('@user', JSON.stringify(newUserInfo));

				showToast('success', '프로필이 성공적으로 변경되었습니다.');
			} else {
				console.log('변경된 데이터가 없습니다.');
			}
		} catch (e) {
			showToast('error', '프로필 업데이트 중 오류가 발생했습니다.');
		} finally {
...
	return (
		<FormProvider {...methods}>
			<CustomBottomSheet
				isVisible={isVisible}
				onClose={handleClose}
				heightRatio={0.9}
				title='프로필 수정'
				rightButton={submitButton}
				bodyStyle={styles.bottomSheetBodyStyle}
			>
				<KeyboardAwareScrollView style={styles.screen}>
					<View style={styles.container}>
						{/* 이미지 */}
...
