...
	const submitButton = (
		<Button
			disabled={!isValid || isUploading}
			color="white"
			size="md2"
			onPress={handleSubmit(onSubmit, onError)}
			testID="submitProfileButton"
		>
			완료
		</Button>
	);

	if (isUploading) {
...
								{errors.bio?.message && (
									<ErrorMessage message={errors.bio.message as string} />
								)}
							</View>

							{/* 안내 문구 */}
							<View testID="profileInputGuidance" style={styles.messageContainer}>
								<FontAwesome name="leaf" color={Colors.brand.primary} size={14} />
								<Text style={styles.infoText}>
									닉네임과 섬 이름은 동물의 숲 여권과 동일하게 입력해주세요.
								</Text>
							</View>
						</View>
...
