...
				<View style={styles.headerLine} />
				<Text style={styles.headerText}>PASSPORT</Text>
				<View style={styles.headerLine} />

				{isMyProfile && (
					<TouchableOpacity
						testID="editProfileButton"
						onPress={openEditProfileModal}
						style={styles.editButton}
						hitSlop={{ top: 10, bottom: 10, left: 10, right: 10 }}
					>
						<MaterialCommunityIcons
							name="lead-pencil"
...
