...
				placeholder={disabled ? '메세지를 보낼 수 없습니다.' : '메세지 보내기'}
				placeholderTextColor={Colors.text.tertiary}
				multiline
				scrollEnabled
				enterKeyHint="send"
				editable={!disabled}
				testID="chatInput"
			/>

			{/* 전송 버튼 */}
			<Pressable
				style={styles.iconContainer}
				onPress={handleSubmit}
				disabled={disabled}
				testID="submitChatButton"
			>
				<FontAwesome6
					name="circle-arrow-up"
					size={28}
					color={disabled ? Colors.icon.default : Colors.brand.primary}
				/>
...
