...
									onChatClick({
										collectionName,
										postId,
										receiverId: creatorId,
									})
								}
								testID="startChatButton"
							>
								<Text style={styles.chatText}>채팅하기</Text>
								<AntDesign
									name="arrow-right"
									color={Colors.brand.primary}
									size={14}
...
