...
	}

	return (
		<View style={styles.container}>
			<View style={styles.messageContainer}>
				<View style={styles.textContainer}>
					<Text style={styles.text}>상대방과의 거래는 어땠나요?</Text>
				</View>

				<View style={styles.buttonsContainer}>
					<Pressable
						style={styles.iconContainer}
						disabled={isReviewed}
						onPress={() => sendReview(1)}
						testID="goodReviewButton"
					>
						<FontAwesome6
							name="smile-beam"
							color={localReview === 1 ? Colors.icon.green : Colors.icon.default}
							size={24}
						/>
...
