...

const PostSummary = <C extends Collection>({ post, collectionName }: PostSummaryProps<C>) => {
	return (
		<Pressable
			style={styles.container}
			onPress={() => navigateToPost({ postId: post.id, collectionName })}
			testID="postSummaryButton"
		>
			{/* 썸네일 */}
			<View style={styles.thumbnailContainer}>
				{isBoardPost(post, collectionName) && (
					<ItemThumbnail
						previewImage={post.cart?.[0]?.imageUrl}
...
